[package]
name = "tin_wasm"
version = "0.1.0"
authors = ["Tinmarino"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"  # for 3d: Float32Array


[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Node',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'MouseEvent',
  'ImageBitmap',
  'console',
  'CssStyleDeclaration',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
]
